fixed add and random button alignment and added inputs to new drink form: :wq

--- a/src/index.css
+++ b/src/index.css
@@ -143,11 +143,16 @@ code {
   }
 
   .details {
-    width: 80%;
+    width: 100%;
     background-color: rgb(243, 247, 244);
     padding: 10px;
     font-family: 'Montserrat', sans-serif;
-    flex-direction: column;
+    /* flex-direction: column; */
+  }
+
+  .modalStyling {
+    display: flex;
+    flex-wrap: wrap;
   }
 
 /* div {
